--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="social-links flex justify-center gap-4 md:gap-6 mb-6 md:mb-8">
-            <a href="https://www.instagram.com/siyahciim/" class="social-icon instagram p-3 md:p-4 hover:scale-110 transition-transform duration-300" data-label-tr="Instagram'da Takip Et" data-label-en="Follow on Instagram">
+            <a href="https://www.instagram.com/siyahxrd/" class="social-icon instagram p-3 md:p-4 hover:scale-110 transition-transform duration-300" data-label-tr="Instagram'da Takip Et" data-label-en="Follow on Instagram">
                 <i class="fab fa-instagram text-lg md:text-2xl"></i>
             </a>
             <a href="https://open.spotify.com/intl-tr/artist/3Yif8cSc5Ji4Rnv9juUDuy" class="social-icon spotify p-3 md:p-4 hover:scale-110 transition-transform duration-300" data-label-tr="Spotify'da Dinle" data-label-en="Listen on Spotify">
